# OmnImage

./: .gitignore  CITATION.cff  README.md  dataset.py  download.py  extract.py  features.py  generate.py  make.sh  omnimage.py  pyproject.toml  random_test_class_names.json  requirements.txt  scaling-analysis.ipynb  utils.py
.github/workflows/: publish.yml  tests.yml
extra/: clique_vs_centroid.py  cross_transfer.json  extract_test_classes.py  final_plots.py  omnimage_cliques.py  resize_imagenet.py  test_class_names.json  transfer.json  transfer_knn.py
make/: evolve.py  features.py  generate.py  utils.py
src/OmnImage/: dataset.py  memmap.py
src/omnimage/: __init__.py  dataset.py  download.py  memmap.py  omnimage.py
tests/: omnimage.py  test_dataset.py  test_omnimage.py
xl/: .gitignore  README.md  launcher.sh  process.py
