[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimage"
version = "0.0.1"
description = "Continual learning dataset of natural images"
readme = "README.md"
authors = [{ name = "lfrati", email = "lfrati.github@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["dataset", "continual-learning"]
dependencies = ["tqdm", "einops", "torch", "torchvision", "numpy"]
requires-python = ">=3.9"

    [project.optional-dependencies]
    dev = ["tqdm", "bumpver", "pip-tools", "build", "twine", "pytest"]

    [project.urls]
    Homepage = "https://github.com/lfrati/OmnImage"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/omnimage/__init__.py" = ["{version}"]
